# RemoteAcssec

./: .gitignore  CMakeLists.txt  project.qrc
HostApp/: CMakeLists.txt  hostwindow.cpp  hostwindow.h  main.cpp
HostApp/src/host/network/: HostServer.cpp  HostServer.h
HostApp/src/host/ui/: HostWindow.cpp  HostWindow.h
Resources/styles/: devicecard.qss  main.qss  sidebar.qss  topbar.qss
ViewerApp/: CMakeLists.txt  main.cpp  viewerwindow.cpp  viewerwindow.h
ViewerApp/src/viewer/network/: ViewerClient.cpp  ViewerClient.h
ViewerApp/src/viewer/ui/: ViewerWindow.cpp  ViewerWindow.h
src/: main.cpp
src/Core/: CMakeLists.txt
src/GUI/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
src/GUI/Components/: devicecardwidget.cpp  devicecardwidget.h  sidebarwidget.cpp  sidebarwidget.h  topbarwidget.cpp  topbarwidget.h
src/GUI/Layouts/: flowlayout.cpp  flowlayout.h
src/GUI/Pages/: devicespage.cpp  devicespage.h  logspage.cpp  logspage.h  sessionspage.cpp  sessionspage.h
src/Network/: CMakeLists.txt
src/Utils/: CMakeLists.txt
